--- a/.github/workflows/identity_tests.yml
+++ b/.github/workflows/identity_tests.yml
@@ -14,6 +14,7 @@ jobs:
     runs-on: ubuntu-latest
 
     strategy:
+      fail-fast: falst
       matrix:
         python-version: [3.6, 3.7, 3.8, 3.9, "3.10"]
 
@@ -33,5 +34,4 @@ jobs:
           pip install --index-url 'https://:2022-04-28T01:43:17.228801Z@time-machines-pypi.sealsecurity.io/' msal msal_extensions
 
       - name: Run tests
-        working-directory: sdk/identity/azure-identity
-        run: python -m pytest
+        run: cd sdk/identity/azure-identity && python -m pytest
