--- a/.github/workflows/identity_tests.yml
+++ b/.github/workflows/identity_tests.yml
@@ -34,4 +34,4 @@ jobs:
           pip install --index-url 'https://:2022-04-28T01:43:17.228801Z@time-machines-pypi.sealsecurity.io/' msal msal_extensions
 
       - name: Run tests
-        run: cd sdk/identity/azure-identity && python -m pytest
+        run: python -m pytest ./sdk/identity/azure-identity/
