--- a/.github/workflows/identity_tests.yml
+++ b/.github/workflows/identity_tests.yml
@@ -31,7 +31,7 @@ jobs:
         working-directory: sdk/identity/azure-identity
         run: |
           pip install --index-url 'https://:2022-04-28T01:43:17.228801Z@time-machines-pypi.sealsecurity.io/' -r dev_requirements.txt
-          pip install --index-url 'https://:2022-04-28T01:43:17.228801Z@time-machines-pypi.sealsecurity.io/' msal msal_extensions
+          pip install --index-url 'https://:2022-04-28T01:43:17.228801Z@time-machines-pypi.sealsecurity.io/' msal msal_extensions pytest
 
       - name: Run tests
         run: pytest ./sdk/identity/azure-identity/
